Rename MyECLPay to MyPayment for genericity and prepare CalypSSO bump

--- a/config.template.yaml
+++ b/config.template.yaml
@@ -141,7 +141,7 @@ USE_FIREBASE: false
 # S3 configuration #
 ####################
 
-# S3 configuration is needed to use the S3 storage for MyECLPay logs
+# S3 configuration is needed to use the S3 storage for MyPayment logs
 
 #S3_BUCKET_NAME: ""
 #S3_ACCESS_KEY_ID: ""
@@ -176,14 +176,14 @@ USE_FIREBASE: false
 #HELLOASSO_CONFIGURATIONS: []
 #HELLOASSO_API_BASE: ""
 
-# Maximum wallet balance for MyECLPay in cents, we will prevent user from adding more money to their wallet if it will make their balance exceed this value
-#MYECLPAY_MAXIMUM_WALLET_BALANCE: 1000
+# Maximum wallet balance for MyPayment in cents, we will prevent user from adding more money to their wallet if it will make their balance exceed this value
+#MYPAYMENT_MAXIMUM_WALLET_BALANCE: 1000
 
 # Trusted urls is a list of redirect payment url that can be trusted by Hyperion.
 # These urls will be used to validate the redirect url provided by the front
 #TRUSTED_PAYMENT_REDIRECT_URLS: []
 
-# MyECLPay requires an external service to recurrently check for transactions and state integrity, this service needs an access to all the data related to the transactions and the users involved
+# MyPayment requires an external service to recurrently check for transactions and state integrity, this service needs an access to all the data related to the transactions and the users involved
 # This service will use a special token to access the data
 # If this token is not set, the service will not be able to access the data and no integrity check will be performed
-#MYECLPAY_DATA_VERIFIER_ACCESS_TOKEN: ""
+#MYPAYMENT_DATA_VERIFIER_ACCESS_TOKEN: ""
