--- a/config.template.yaml
+++ b/config.template.yaml
@@ -115,6 +115,85 @@ SMTP_EMAIL: ""
 # To enable Firebase push notification capabilities, a JSON key file named `firebase.json` should be placed at Hyperion root.
 # This file can be created and downloaded from [Google cloud, IAM and administration, Service account](https://console.cloud.google.com/iam-admin/serviceaccounts) page.
 USE_FIREBASE: false
+
+########################
+# School Configuration #
+########################
+school:
+  # Name of the school (ex: École Centrale Lyon)
+  school_name: "École Centrale Lyon"
+  # Name of the application (ex: MyECL)
+  application_name: MyECL
+  # Name of the payment solution (ex: MyECLPay)
+  payment_name: MyECLPay
+  # Domain name of the application (ex: myecl.fr)
+  application_domain_name: myecl.fr
+  # Name of the entity managing the application (ex: ÉCLAIR)
+  entity_name: ÉCLAIR
+  # The entity website url, used for promotion (ex: "https://myecl.fr/")
+  entity_site_url: "https://myecl.fr/"
+  # The entity email, used for contact
+  entity_email: "eclair@myecl.fr"
+  # Email placeholder
+  email_placeholder: "prenom.nom@etu.ec-lyon.fr"
+  # Apple Store URL
+  app_store_url: https://apps.apple.com/fr/app/myecl/id6444443430
+  # Google Play Store URL
+  play_store_url: https://play.google.com/store/apps/details?id=fr.myecl.titan
+
+  # Date of the end of support for the application (ex: 2025-08-25)
+  end_of_support: "2030-01-01"
+
+  # Regex for email account type validation
+  # On registration, user whose email match these regex will be automatically assigned to the corresponding account type
+  # Use simple quotes to avoid escaping the regex
+  # Ex: `student_email_regex: '^[\w\-.]*@domain.fr$'`
+  student_email_regex: '^[\w\-.]*@etu(-enise)?\.ec-lyon\.fr$'
+  staff_email_regex:
+  former_student_email_regex:
+  # Colors used for the application
+  primary_color: "#F97315"
+
+  # Questions and options for the form of account activation
+  main_activation_form:
+    fields:
+      - birthdate
+      - promotion
+      - phone
+      - floor
+      - nickname
+    floor_choices:
+      - Autre
+      - Adoma
+      - Exte
+      - T1
+      - T2
+      - T3
+      - T4
+      - T56
+      - U1
+      - U2
+      - U3
+      - U4
+      - U56
+      - V1
+      - V2
+      - V3
+      - V45
+      - V6
+      - X1
+      - X2
+      - X3
+      - X4
+      - X5
+      - X6
+    promotion_offset: 0
+
+  # If event should be confirmed by a moderator before being added to the calendar
+  #require_event_confirmation: bool = False
+
+  # If event should be confirmed by a moderator before being added to the calendar
+  #require_event_confirmation: bool = False
 ########################
 # Matrix configuration #
 ########################
