--- a/requirements-common.txt
+++ b/requirements-common.txt
@@ -16,7 +16,6 @@ icalendar==5.0.13
 jellyfish==1.2.1                    # String Matching
 Jinja2==3.1.6                       # template engine for html files
 phonenumbers==8.13.43               # Used for phone number validation
-psutil==7.0.0                       # psutil is used to determine the number of Hyperion workers
 pydantic-settings==2.3.4
 pydantic==2.12.5
 pyjwt[crypto]==2.8.0                # generate and verify the JWT tokens, imported as `jwt`
@@ -32,4 +31,4 @@ unidecode==1.3.8
 uvicorn[standard]==0.30.6
 weasyprint==65.1                    # HTML to PDF converter
 xlsxwriter==3.2.0
-psycopg[binary]==3.2.13                  # PostgreSQL adapter for synchronous operations at startup (database initializations & migrations), local installation is recommended for a production site
+psycopg[binary]==3.2.13             # PostgreSQL adapter for synchronous operations at startup (database initializations & migrations)
