Preprod-building workflow: input PR number instead of branch name (#892)
## Description

### Summary

<!--Brief description of what this PR does.-->
<!--Don't explain the code, justify what this PR exists for!-->

#### The reason why
The new manually-triggered workflow to build&push pre-prods has a nice
dropdown to select the pre-prod...
But the branch name had to be put in as a string.

**Now you write the PR number.**

#### Before/after comparison
* Before, it required the dev to search the branch name (which we often
don't know), but we remember more easily PR numbers because shorter.
* A branch name is long thus prone to errors, a PR number is less
error-prone
* There was no validation before, now a step ensures the PR number makes
sense in the 1st place.

#### Technical details
The best would have been a nice dropdown (with branch names or PR
numbers, whatever) because this ensures no error is possible and the dev
doesn't have to search information.
But I did not find how to run some command before/inside the top-level
`on` to generate the dropdown choices.

<!--Sources/references at the end-->

### Issues to be resolved <!-- If applicable-->
<!--Use keywords "closes", "fixes", "resolves", or others at
https://docs.github.com/en/get-started/writing-on-github/working-with-advanced-formatting/using-keywords-in-issues-and-pull-requests
-->

<!--Fixes #-->
<!--Fixes aeecleclair/CalypSSO#-->

### Required PRs <!-- If applicable-->
<!--Use keywords "depends on" or "blocked by", see
https://github.com/gregsdennis/dependencies-action -->

<!--Depends on #-->
<!--Depends on aeecleclair/CalypSSO#-->

### Changes Made

<!--Please describe the changes made in this pull request-->
<!--Tell the big steps, use a checklist to show progress. You can
explain here how the code works.-->

You'd better read the code for this one.

### Additional Notes

<!--Anything relevant that does not quite fit in the summary-->

<details>
<summary>

## Classification

</summary>

### Type of Ch

--- a/.github/workflows/preprod-publish.yml
+++ b/.github/workflows/preprod-publish.yml
@@ -3,10 +3,9 @@ name: Build and Publish Preprod
 on:
   workflow_dispatch:
     inputs:
-      branch:
-        description: "Branch to deploy in preprod"
+      pr:
+        description: "PR to deploy in preprod"
         required: true
-        default: "main"
       preprod_env:
         description: "Preprod environment"
         required: true
@@ -28,10 +27,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Branch name from input PR number
+        id: branch
+        run: |
+          branch=$(curl -fs ${{ github.api_url }}/repos/${{ github.repository }}/pulls/${{ github.event.inputs.pr }} | jq -r '.head.ref')
+          echo "branch=${branch:?'PR #${{ github.event.inputs.pr }} does not exist'}" >> "$GITHUB_OUTPUT"
       - name: Checkout code
         uses: actions/checkout@v6
         with:
-          ref: ${{ github.event.inputs.branch }}
+          ref: ${{ steps.branch.outputs.branch }}
 
       - name: Docker metadata
         id: meta
@@ -44,7 +48,7 @@ jobs:
             type=sha,prefix={{branch}}-
           labels: |
             preprod.environment=${{ github.event.inputs.preprod_env }}
-            preprod.branch=${{ github.event.inputs.branch }}
+            preprod.pr=${{ github.event.inputs.pr }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3.11.1
