--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -12,7 +12,7 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - hyperion_db_data:/var/lib/postgresql/data
+      - hyperion_db_data:/var/lib/postgresql
 
   hyperion-redis:
     image: redis
