--- a/.env.template
+++ b/.env.template
@@ -2,14 +2,13 @@
 # PostgreSQL configuration #
 ############################
 
-# Should be set to the name of the postgres container
 POSTGRES_USER=""
 POSTGRES_PASSWORD=""
 # Should be set to the name of the postgres container
 POSTGRES_HOST=""
 POSTGRES_DB="hyperion"
 POSTGRES_TZ="Etc/UTC"
-# The database can be accessed through the command line with
+# The database can be accessed through the command line with:
 # psql -U $POSTGRES_USER -d $POSTGRES_DB
 
 ########################
