--- a/.env.template
+++ b/.env.template
@@ -4,8 +4,7 @@
 
 POSTGRES_USER=""
 POSTGRES_PASSWORD=""
-# Should be set to the name of the postgres container
-POSTGRES_HOST=""
+POSTGRES_HOST="" # If using Docker, should be set to the name of the postgres container
 POSTGRES_DB="hyperion"
 POSTGRES_TZ="Etc/UTC"
 # The database can be accessed through the command line with:
