--- a/tests/.env.test
+++ b/tests/.env.test
@@ -7,8 +7,7 @@
 ############################
 
 # Will be used if tests are run with postgresql (should be the case because postgres is used in production)
-# Should be set to the name of the postgres container
-POSTGRES_HOST="localhost"
+POSTGRES_HOST="localhost" # Should be set to the name of the postgres container
 POSTGRES_USER="hyperion"
 POSTGRES_PASSWORD="somerealpassword"
 POSTGRES_DB="hyperion"
