Update README.md, and various related changes (#845)
See the commits for a (rather) clear-cut view of the changes

---------

Co-authored-by: Timothée Robert <114694873+Rotheem@users.noreply.github.com>
Co-authored-by: Armand Didierjean <95971503+armanddidierjean@users.noreply.github.com>

--- a/.env.template
+++ b/.env.template
@@ -2,12 +2,13 @@
 # PostgreSQL configuration #
 ############################
 
-# Should be set to the name of the postgres container
-POSTGRES_HOST="hyperion-db"
 POSTGRES_USER=""
 POSTGRES_PASSWORD=""
+POSTGRES_HOST="" # If using Docker, should be set to the name of the postgres container
 POSTGRES_DB="hyperion"
 POSTGRES_TZ="Etc/UTC"
+# The database can be accessed through the command line with:
+# psql -U $POSTGRES_USER -d $POSTGRES_DB
 
 ########################
 # Redis configuration #
@@ -16,8 +17,8 @@ POSTGRES_TZ="Etc/UTC"
 # We use the default redis configuration, so the protected mode is enabled by default (see https://redis.io/docs/manual/security/#protected-mode)
 # If you want to use a custom configuration, a password and a specific binds should be used to avoid security issues
 
-# May be left at "" during dev if you don't have a redis server running, in production it should be set to the name of the redis container
-REDIS_HOST="hyperion-redis"
+# REDIS_HOST may be commented to disable Redis during development if you don't have a redis server running, in production it should be set to the name of the redis container
+#REDIS_HOST="localhost"
 REDIS_PORT=6379
 # Should be commented during development to work with docker-compose-dev, and set in production
 #REDIS_PASSWORD=""
