--- a/tests/.env.test
+++ b/tests/.env.test
@@ -2,16 +2,28 @@
 #   This dotenv file and its values should NEVER be used in PRODUCTION!   #
 ###########################################################################
 
+############################
+# PostgreSQL configuration #
+############################
+
 # Will be used if tests are run with postgresql (should be the case because postgres is used in production)
-POSTGRES_HOST="localhost"
+POSTGRES_HOST="localhost" # Should be set to the name of the postgres container
 POSTGRES_USER="hyperion"
 POSTGRES_PASSWORD="somerealpassword"
 POSTGRES_DB="hyperion"
 POSTGRES_TZ="Etc/UTC"
 
+########################
 # Redis configuration #
+########################
+# Redis configuration is needed to use the rate limiter, or multiple uvicorn workers
+# We use the default redis configuration, so the protected mode is enabled by default (see https://redis.io/docs/manual/security/#protected-mode)
+# If you want to use a custom configuration, a password and a specific binds should be used to avoid security issues
+
+# REDIS_HOST may be commented to disable Redis during development if you don't have a redis server running, in production it should be set to the name of the redis container
 REDIS_HOST="localhost"
 REDIS_PORT=6379
+# Should be commented during development to work with docker-compose-dev, and set in production
 #REDIS_PASSWORD=""
 REDIS_LIMIT=5
 REDIS_WINDOW=60
