--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,8 +1,7 @@
--r requirements-common.txt
+-r requirements.txt
 aiosqlite==0.20.0
 boto3-stubs[essential]==1.38.23
 google-auth-stubs==0.3.0
-httpx==0.27.0                       # needed for tests as a replacement of requests in TestClient
 mypy[faster-cache]==1.16.0
 pytest-alembic==0.12.1
 pytest-asyncio==1.3.0
