--- a/requirements.txt
+++ b/requirements.txt
@@ -12,17 +12,18 @@ fastapi[standard]==0.122.0
 firebase-admin==6.5.0               # Firebase is used for push notification
 google-auth-oauthlib==1.2.1
 helloasso-python==1.0.5
+httpx==0.27.0
 icalendar==5.0.13
 jellyfish==1.2.1                    # String Matching
 Jinja2==3.1.6                       # template engine for html files
 phonenumbers==8.13.43               # Used for phone number validation
 psutil==7.0.0                       # psutil is used to determine the number of Hyperion workers
+psycopg[binary]==3.2.13              # PostgreSQL adapter for *synchronous* operations at startup (database initializations & migrations)
 pydantic-settings==2.3.4
 pydantic==2.12.5
 pyjwt[crypto]==2.8.0                # generate and verify the JWT tokens, imported as `jwt`
 PyMuPDF==1.26.6                     # PDF processing, imported as `fitz`
 pypdf==6.4.0
-python-dotenv==1.0.1                # load environment variables from .env file
 python-multipart==0.0.18             # a form data parser, as oauth flow requires form-data parameters
 redis==5.0.8
 requests==2.32.4
@@ -32,4 +33,3 @@ unidecode==1.3.8
 uvicorn[standard]==0.30.6
 weasyprint==65.1                    # HTML to PDF converter
 xlsxwriter==3.2.0
-psycopg[binary]==3.2.13                  # PostgreSQL adapter for synchronous operations at startup (database initializations & migrations), local installation is recommended for a production site
