feat: modular permissions
^ Conflicts:
^	app/core/groups/groups_type.py
^	app/core/memberships/endpoints_memberships.py
^	app/dependencies.py
^	app/module.py
^	app/modules/cdr/coredata_cdr.py
^	app/modules/cdr/dependencies_cdr.py
^	app/modules/cdr/endpoints_cdr.py
^	app/modules/cdr/utils_cdr.py
^	app/modules/centralassociation/endpoints_centralassociation.py
^	app/modules/raid/endpoints_raid.py
^	app/modules/sport_competition/dependencies_sport_competition.py
^	app/modules/sport_competition/endpoints_sport_competition.py
^	app/modules/sport_competition/utils/schemas_converters.py
^	app/modules/sport_competition/utils_sport_competition.py
^	app/utils/auth/providers.py
^	tests/config.test.yaml
^	tests/core/test_core.py
^	tests/core/test_memberships.py
^	tests/modules/cdr/test_cdr.py
^	tests/modules/sport_competition/test_purchases.py
^	tests/modules/sport_competition/test_sport_inscription.py
^	tests/modules/sport_competition/test_validation.py
^	tests/modules/test_flappybird.py
^	tests/modules/test_raid.py

--- a/tests/config.test.yaml
+++ b/tests/config.test.yaml
@@ -91,31 +91,21 @@ AUTH_CLIENTS:
     redirect_uri:
       - http://127.0.0.1:8000/docs
     auth_client: "AppAuthClient"
-  BaseAuthClient:
-    secret: secret
+  GroupPermissionAuthClient:
+    secret: "secret"
     redirect_uri:
       - http://127.0.0.1:8000/docs
-    auth_client: BaseAuthClient
-  RalllyAuthClient:
-    secret: secret
+    auth_client: "AppAuthClient"
+  AccountTypePermissionAuthClient:
+    secret: "secret"
     redirect_uri:
-      - http://127.0.0.1:8000/docs
-    auth_client: RalllyAuthClient
-  SynapseAuthClient:
-    secret: secret
+      - "http://127.0.0.1:8000/docs"
+    auth_client: "RalllyAuthClient"
+  TokenIntrospectionAuthClient:
+    secret: "secret"
     redirect_uri:
-      - http://127.0.0.1:8000/docs
-    auth_client: SynapseAuthClient
-  AcceptingOnlyECLUsersAuthClient:
-    secret: secret
-    redirect_uri:
-      - http://127.0.0.1:8000/docs
-    auth_client: NextcloudAuthClient
-  RestrictingUsersGroupsAuthClient:
-    secret: secret
-    redirect_uri:
-      - http://127.0.0.1:8000/docs
-    auth_client: DocumensoAuthClient
+      - "http://127.0.0.1:8000/docs"
+    auth_client: "SynapseAuthClient"
 
 #####################
 # Hyperion settings #
