POC: Modular permissions (#679)
## Description

### Summary

#### Introducing permissions

Relying on hardcoded groups for access restriction is prone to be
limiting at some point. We can't easily change which group owns a
specific module and it is heavily dependent on Centrale's association
structure.

This PR introduces a new concept : Permissions. Represented by
system-wide unique string they are declared by modules and replace
completely GroupTypes for endpoint restriction. A user must have the
endpoint's specific permission to have access to it. A permission can be
linked to a user through 2 ways :
- Linking a group to the permission and having the user in the group
- Linking an account type to the permission and having this account type
for the user

Thus, a permission can be linked to multiple groups and/or account type,
can be easily transferred and allow each Hyperion instance to adapt
better to any school's association structure.

#### Improving visibility

The visibility system was introduced to restrict in-app access to
module, however it was still falling short for direct API calls both in
synchronization and flexibility. The visibility could be set on/off for
certain account types or groups while the endpoint would still be
restricting another group and only GroupType could be used for API
restriction.

To address this issue, we use `access_XXX` permissions, this specific
syntax will be recognized by Titan as a replacement for visibility. As
permissions are fully modular and uniformized, both issues are resolved
by replacing visibility by specific permissions.

#### Integrating auth restriction

Auth providers allow access depending on account types or GroupTypes,
however as permissions delete GroupTypes there was a need to refacto
this part. The chosen method is a set of specific permissions for auth
manually added to the global permission list after the module discovery.

### Changes Made

- [x] add permissions modification logic
- [x] declare module

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,11 @@ broadcaster==0.3.1                  # Working with websockets with multiple work
 calypsso==2.2.1
 Faker==37.1.0
 fastapi[standard]==0.122.0
-firebase-admin==6.5.0               # Firebase is used for push notification
+firebase-admin==7.1.0               # Firebase is used for push notification
+google-api-python-client==2.187.0
 google-auth-oauthlib==1.2.1
 helloasso-python==1.0.5
-httpx==0.27.0
+httpx==0.28.1
 icalendar==5.0.13
 jellyfish==1.2.1                    # String Matching
 Jinja2==3.1.6                       # template engine for html files
@@ -21,7 +22,7 @@ psutil==7.0.0                       # psutil is used to determine the number of 
 psycopg[binary]==3.2.13              # PostgreSQL adapter for *synchronous* operations at startup (database initializations & migrations)
 pydantic-settings==2.3.4
 pydantic==2.12.5
-pyjwt[crypto]==2.8.0                # generate and verify the JWT tokens, imported as `jwt`
+pyjwt[crypto]==2.10.1                # generate and verify the JWT tokens, imported as `jwt`
 PyMuPDF==1.26.6                     # PDF processing, imported as `fitz`
 pypdf==6.4.0
 python-multipart==0.0.18             # a form data parser, as oauth flow requires form-data parameters
