feat: initialiaze basic auth permission on startup

--- a/tests/config.test.yaml
+++ b/tests/config.test.yaml
@@ -95,7 +95,7 @@ AUTH_CLIENTS:
     secret: "secret"
     redirect_uri:
       - http://127.0.0.1:8000/docs
-    auth_client: "AppAuthClient"
+    auth_client: "NextcloudAuthClient"
   AccountTypePermissionAuthClient:
     secret: "secret"
     redirect_uri:
