Rename MyECLPay to MyPayment for genericity & bump CalypSSO (#914)
# Description

## Summary

<!--BRIEF description: DONT'T EXPLAIN the code: JUSTIFY what this PR is
for!-->

Renaming MyECLPay to MyPayment for 2 reasons:
- Compatibility with CalypSSO: For #879 I need a change on CalypSSO, but
the current latest (2.6.1) breaks Hyperion, hence this refacto is
required
- Genericity: not hard-coding our school's name in the internal payment
solution to make it easier to fork and deploy for other schools

<!--#### Sources at the end-->

## Issues/PR dependencies

<!--Use a keyword, then #123 for the same repo or
aeecleclair/RepoName#123 for another-->

### Issues to be resolved

<!--Keywords: "closes", "fixes", "resolves" -->
<!--Fixes #-->

### Required PRs

<!--Keywords: "depends on", "blocked by" -->
<!--Depends on #-->

## Changes Made

<!--DESCRIBE the changes: tell the BIG STEPS, use a CHECKLIST to show
progress. You can explain below how the code works.-->

- [x] Renaming myeclpay to mypayment to fix CalypSSO compatibility
- [x] Refacto for CalypSSO to work
- [x] Refactor the displayname for the front-end

## Additional Notes

<!--Anything relevant that does not quite fit in the summary-->

<!--Don't touch thses two tags-->
<details>
<summary>

# Classification

</summary>

## Type of Change

- [x] 🐛 Bug fix (non-breaking change which fixes an issue)
- [ ] ✨ New feature (non-breaking change which adds functionality)
- [x] 🔨 Refactor (non-breaking change that neither fixes a bug nor adds
a feature)
- [ ] 🔧 Infra CI/CD (changes to configs of workflows)
- [x] 💥 BREAKING CHANGE (fix or feature that require a new minimal
version of the front-end)
- [ ] 😶‍🌫️ No impact for the end-users

## Impact & Scope

- [x] Core functionality changes
- [ ] Single module changes
- [ ] Multiple modules changes
- [x] Database migrations required
- [ ] Other: ... <!--Not module-oriented: write something!-->

## Testing

- [x] 1. Tested this locally
- [x] 2. Added/modified tests that pas

--- a/tests/config.test.yaml
+++ b/tests/config.test.yaml
@@ -128,12 +128,49 @@ SMTP_PASSWORD: ""
 SMTP_EMAIL: ""
 
 ##########################
-# Firebase Configuration #
+# Firebase configuration #
 ##########################
 
 # To enable Firebase push notification capabilities, a JSON key file named `firebase.json` should be placed at Hyperion root.
 # This file can be created and downloaded from [Google cloud, IAM and administration, Service account](https://console.cloud.google.com/iam-admin/serviceaccounts) page.
 USE_FIREBASE: False
+
+########################
+# School configuration #
+########################
+
+school:
+  school_name: "École Centrale Lyon"
+  application_name: Tests MyECL
+  payment_name: Tests MyECLPay
+  application_domain_name: myecl.fr
+  entity_name: ÉCLAIR
+  entity_site_url: "https://myecl.fr/"
+  entity_email: "eclair@myecl.fr"
+  end_of_support: "2030-01-01"
+  email_placeholder: prenom.nom@etu.ec-lyon.fr
+  main_activation_form:
+    fields:
+      - birthdate
+      - promotion
+      - phone
+      - floor
+      - nickname
+    floor_choices:
+      - V3
+      - V45
+      - T21
+      - X3
+      - Adoma
+      - "Exté"
+      - X2
+    promotion_offset: 0
+
+  primary_color: "#F97315"
+
+  student_email_regex: '^[\w\-.]*@etu(-enise)?\.ec-lyon\.fr$'
+  staff_email_regex: '^[\w\-.]*@(enise\.)?ec-lyon\.fr$'
+  former_student_email_regex: '^[\w\-.]*@centraliens-lyon\.net$'
 
 ###########################
 # HelloAsso configuration #
@@ -144,6 +181,7 @@ USE_FIREBASE: False
 # HELLOASSO_API_BASE should have the format: `api.helloasso-sandbox.com`
 # HelloAsso only allow 20 simultaneous active access token. Note that each Hyperion worker will need its own access token.
 
+MYPAYMENT_MAXIMUM_WALLET_BALANCE: 5000
 HELLOASSO_CONFIGURATIONS: {} # [["name", "helloasso_client_id", "helloasso_client_secret", "helloasso_slug", "redirection_uri"]]
 #  MYECLPAY:
 #    helloasso_client_id: ...
@@ -153,7 +191,7 @@ HELLOASSO_CONFIGURATIONS: {} # [["name", "helloasso_client_id", "helloasso_clien
 HELLOASSO_API_BASE: api.helloasso-sandbox.com
 
 # Maximum wallet balance for MyECLPay in cents, we will prevent user from adding more money to their wallet if it will make their balance exceed this value
-MYECLPAY_MAXIMUM_WALLET_BALANCE: 8000
+MYPAYMENT_MAXIMUM_WALLET_BALANCE: 5000
 
 # Trusted urls is a list of redirect payment url that can be trusted by Hyperion.
 # These urls will be used to validate the redirect url provided by the front
