--- a/config.template.yaml
+++ b/config.template.yaml
@@ -152,7 +152,87 @@ SMTP_EMAIL:
 
 # To enable Firebase push notification capabilities, a JSON key file named `firebase.json` should be placed at Hyperion root.
 # This file can be created and downloaded from [Google cloud, IAM and administration, Service account](https://console.cloud.google.com/iam-admin/serviceaccounts) page.
-USE_FIREBASE: False
+USE_FIREBASE: false
+
+########################
+# School configuration #
+########################
+
+school:
+  # Name of the school (ex: École Centrale Lyon)
+  school_name: "École Centrale Lyon"
+  # Name of the application (ex: MyECL)
+  application_name: MyECL
+  # Name of the payment solution (ex: MyECLPay)
+  payment_name: MyECLPay
+  # Domain name of the application (ex: myecl.fr)
+  application_domain_name: myecl.fr
+  # Name of the entity managing the application (ex: ÉCLAIR)
+  entity_name: ÉCLAIR
+  # The entity website url, used for promotion (ex: "https://myecl.fr/")
+  entity_site_url: "https://myecl.fr/"
+  # The entity email, used for contact
+  entity_email: "eclair@myecl.fr"
+  # Email placeholder
+  email_placeholder: "prenom.nom@etu.ec-lyon.fr"
+  # Apple Store URL
+  app_store_url: https://apps.apple.com/fr/app/myecl/id6444443430
+  # Google Play Store URL
+  play_store_url: https://play.google.com/store/apps/details?id=fr.myecl.titan
+
+  # Date of the end of support for the application (ex: 2025-08-25)
+  end_of_support: "2030-01-01"
+
+  # Regex for email account type validation
+  # On registration, user whose email match these regex will be automatically assigned to the corresponding account type
+  # Use simple quotes to avoid escaping the regex
+  # Ex: `student_email_regex: '^[\w\-.]*@domain.fr$'`
+  student_email_regex: '^[\w\-.]*@etu(-enise)?\.ec-lyon\.fr$'
+  staff_email_regex:
+  former_student_email_regex:
+  # Colors used for the application
+  primary_color: "#F97315"
+
+  # Questions and options for the form of account activation
+  main_activation_form:
+    fields:
+      - birthdate
+      - promotion
+      - phone
+      - floor
+      - nickname
+    floor_choices:
+      - Autre
+      - Adoma
+      - Exte
+      - T1
+      - T2
+      - T3
+      - T4
+      - T56
+      - U1
+      - U2
+      - U3
+      - U4
+      - U56
+      - V1
+      - V2
+      - V3
+      - V45
+      - V6
+      - X1
+      - X2
+      - X3
+      - X4
+      - X5
+      - X6
+    promotion_offset: 0
+
+  # If event should be confirmed by a moderator before being added to the calendar
+  #require_event_confirmation: bool = False
+
+  # If event should be confirmed by a moderator before being added to the calendar
+  #require_event_confirmation: bool = False
 ########################
 # Matrix configuration #
 ########################
@@ -179,7 +259,7 @@ USE_FIREBASE: False
 # S3 configuration #
 ####################
 
-# S3 configuration is needed to use the S3 storage for MyECLPay logs
+# S3 configuration is needed to use the S3 storage for MyPayment logs
 
 #S3_BUCKET_NAME:
 #S3_ACCESS_KEY_ID:
@@ -218,15 +298,15 @@ USE_FIREBASE: False
 #    redirection_uri: null
 #HELLOASSO_API_BASE: api.helloasso-sandbox.com
 
-# Maximum wallet balance for MyECLPay in cents, we will prevent user from adding more money to their wallet if it will make their balance exceed this value
-#MYECLPAY_MAXIMUM_WALLET_BALANCE: 8000
+# Maximum wallet balance for MyPayment in cents, we will prevent user from adding more money to their wallet if it will make their balance exceed this value
+#MYPAYMENT_MAXIMUM_WALLET_BALANCE: 1000
 
 # Trusted urls is a list of redirect payment url that can be trusted by Hyperion.
 # These urls will be used to validate the redirect url provided by the front
 #TRUSTED_PAYMENT_REDIRECT_URLS:
 #  - http://localhost:3000/static.html
 
-# MyECLPay requires an external service to recurrently check for transactions and state integrity, this service needs an access to all the data related to the transactions and the users involved
+# MyPayment requires an external service to recurrently check for transactions and state integrity, this service needs an access to all the data related to the transactions and the users involved
 # This service will use a special token to access the data
 # If this token is not set, the service will not be able to access the data and no integrity check will be performed
-#MYECLPAY_DATA_VERIFIER_ACCESS_TOKEN:
+#MYPAYMENT_DATA_VERIFIER_ACCESS_TOKEN:
