--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ authlib==1.6.5
 bcrypt==4.1.3                       # password hashing
 boto3==1.38.23
 broadcaster==0.3.1                  # Working with websockets with multiple workers.
-calypsso==2.2.1
+calypsso==2.7.0
 Faker==37.1.0
 fastapi[standard]==0.122.0
 firebase-admin==7.1.0               # Firebase is used for push notification
@@ -19,7 +19,8 @@ jellyfish==1.2.1                    # String Matching
 Jinja2==3.1.6                       # template engine for html files
 phonenumbers==8.13.43               # Used for phone number validation
 psutil==7.0.0                       # psutil is used to determine the number of Hyperion workers
-psycopg[binary]==3.2.13              # PostgreSQL adapter for *synchronous* operations at startup (database initializations & migrations)
+psycopg[binary]==3.2.13             # PostgreSQL adapter for *synchronous* operations at startup (database initializations & migrations)
+pydantic-extra-types==2.10.5
 pydantic-settings==2.3.4
 pydantic==2.12.5
 pyjwt[crypto]==2.10.1                # generate and verify the JWT tokens, imported as `jwt`
