--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,8 +53,12 @@ dependencies = [
     "sqlalchemy[asyncio]==2.0.44",       # [asyncio] allows greenlet to be installed on Apple M1 devices
     "unidecode==1.3.8",
     "uvicorn[standard]==0.30.6",
-    "weasyprint==65.1",                  # HTML to PDF converter
     "xlsxwriter==3.2.0",
+]
+
+[project.optional-dependencies]
+weasyprint = [
+    "weasyprint==65.1",                  # HTML to PDF converter
 ]
 
 [dependency-groups]
