--- a/.github/workflows/lintandformat.yml
+++ b/.github/workflows/lintandformat.yml
@@ -9,6 +9,9 @@ jobs:
   lintandformat:
     runs-on: ubuntu-latest
     timeout-minutes: 10
+    env:
+      # Configure a constant location for the uv cache
+      UV_CACHE_DIR: ~/.cache/uv
 
     steps:
       - name: Check out the code
@@ -19,20 +22,22 @@ jobs:
         uses: actions/setup-python@v6
         id: setup-python
         with:
-          python-version: "3.14"
+          python-version-file: .python-version
 
       - name: Cache uv folder
         id: cache-uv
         uses: actions/cache@v4.3.0
         with:
           path: ~/.cache/uv
-          key: ${{ runner.os }}-python-${{ steps.setup-python.outputs.python-version }}-uv-${{ hashFiles('requirements.txt', 'requirements-dev.txt') }}
+          key: ${{ runner.os }}-python-${{ steps.setup-python.outputs.python-version }}-uv-${{ hashFiles('uv.lock') }}
 
       - name: Install uv
-        run: curl -LsSf https://astral.sh/uv/install.sh | sh
+        uses: astral-sh/setup-uv@v7
+        with:
+          version: "0.9.27"
 
       - name: Install dependencies
-        run: uv pip install --system -r requirements-dev.txt
+        run: uv sync --locked
 
       - name: Cache .ruff_cache folder
         id: ruff_cache
@@ -43,8 +48,8 @@ jobs:
 
       - name: Lint and check formating with ruff
         run: |
-          ruff check --output-format=github
-          ruff format --check
+          uv run ruff check --output-format=github
+          uv run ruff format --check
 
       - name: Cache .mypy_cache folder
         id: mypy_cache
@@ -54,4 +59,7 @@ jobs:
           key: mypy_cache-${{ github.head_ref }}
 
       - name: Type checking using mypy
-        run: mypy .
+        run: uv run mypy .
+
+      - name: Minimize uv cache
+        run: uv cache prune --ci
