--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,9 @@ jobs:
   test:
     runs-on: ubuntu-latest
     timeout-minutes: 10
+    env:
+      # Configure a constant location for the uv cache
+      UV_CACHE_DIR: ~/.cache/uv
 
     # Add a Redis container
     # https://docs.github.com/en/actions/using-containerized-services/creating-redis-service-containers#running-jobs-directly-on-the-runner-machine
@@ -60,20 +63,22 @@ jobs:
         uses: actions/setup-python@v6
         id: setup-python
         with:
-          python-version: "3.14"
+          python-version-file: .python-version
 
       - name: Cache uv folder
         id: cache-uv
         uses: actions/cache@v4.3.0
         with:
           path: ~/.cache/uv
-          key: ${{ runner.os }}-python-${{ steps.setup-python.outputs.python-version }}-uv-${{ hashFiles('requirements.txt', 'requirements-dev.txt') }}
+          key: ${{ runner.os }}-python-${{ steps.setup-python.outputs.python-version }}-uv-${{ hashFiles('uv.lock') }}
 
       - name: Install uv
-        run: curl -LsSf https://astral.sh/uv/install.sh | sh
+        uses: astral-sh/setup-uv@v7
+        with:
+          version: "0.9.27"
 
       - name: Install dependencies
-        run: uv pip install --system -r requirements-dev.txt
+        run: uv sync --locked
 
       - name: Cache .pytest_cache folder
         id: pytest_cache
@@ -84,14 +89,17 @@ jobs:
 
       # Run unit tests, run them all when push to main branch
       - name: Run all unit tests
-        run: python tests_script.py --cov --all
+        run: uv run tests_script.py --cov --all
         if: github.event_name == 'push'
 
       - name: Run unit tests for changed files
-        run: python tests_script.py --cov
+        run: uv run tests_script.py --cov
         if: github.event_name == 'pull_request'
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5.5.1
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
+      - name: Minimize uv cache
+        run: uv cache prune --ci
