--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -1,6 +1,6 @@
 services:
   hyperion-db:
-    image: postgres
+    image: postgres:15.1-alpine3.17
     container_name: hyperion-db-dev
     restart: unless-stopped
     environment:
@@ -15,7 +15,7 @@ services:
       - hyperion_db_data:/var/lib/postgresql/data
 
   hyperion-redis:
-    image: redis
+    image: redis:7.0-alpine3.17
     container_name: hyperion-redis-dev
     restart: unless-stopped
     ports:
