--- a/.github/workflows/lintandformat.yml
+++ b/.github/workflows/lintandformat.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/setup-python@v6
         id: setup-python
         with:
-          python-version: "3.14"
+          python-version-file: .python-version
 
       - name: Cache uv folder
         id: cache-uv
@@ -29,7 +29,7 @@ jobs:
           key: ${{ runner.os }}-python-${{ steps.setup-python.outputs.python-version }}-uv-${{ hashFiles('requirements.txt', 'requirements-dev.txt') }}
 
       - name: Install uv
-        run: curl -LsSf https://astral.sh/uv/install.sh | sh
+        run: curl -LsSf https://astral.sh/uv/0.9.27/install.sh | sh
 
       - name: Install dependencies
         run: uv pip install --system -r requirements-dev.txt
