--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -12,7 +12,7 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - hyperion-db:/var/lib/postgresql/data
+      - ./hyperion-db:/var/lib/postgresql/data
 
   hyperion-redis:
     image: redis:7.0-alpine3.17
@@ -20,6 +20,8 @@ services:
     restart: unless-stopped
     ports:
       - 6379:6379
+    volumes:
+      - ./hyperion_redis:/data
 
 volumes:
   hyperion_db_data:
