--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -21,7 +21,7 @@ services:
     ports:
       - 6379:6379
     volumes:
-      - ./hyperion_redis:/data
+      - ./hyperion-redis:/data
 
 volumes:
   hyperion_db_data:
