--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,6 @@
 services:
   hyperion-db:
-    image: postgres
+    image: postgres:15.1-alpine3.17
     container_name: hyperion-db
     restart: unless-stopped
     healthcheck:
@@ -14,15 +14,17 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
       PGTZ: ${POSTGRES_TZ}
     volumes:
-      - ./hyperion_db_data:/var/lib/postgresql/data:Z
+      - ./hyperion-db:/var/lib/postgresql/data
 
   hyperion-redis:
-    image: redis
+    image: redis:7.0-alpine3.17
     container_name: hyperion-redis
     restart: unless-stopped
     command: redis-server --requirepass ${REDIS_PASSWORD}
     environment:
       REDIS_PASSWORD: ${REDIS_PASSWORD}
+    volumes:
+      - ./hyperion-redis:/data
 
   hyperion-app:
     build:
@@ -39,7 +41,7 @@ services:
       - 8000:8000
     env_file: .env
     volumes:
-      - ./logs:/hyperion/logs:Z
-      - ./data:/hyperion/data:Z
-      - ./config.yaml:/hyperion/config.yaml:Z
-      - ./firebase.json:/hyperion/firebase.json:Z
+      - ./logs:/hyperion/logs
+      - ./data:/hyperion/data
+      - ./config.yaml:/hyperion/config.yaml
+      - ./firebase.json:/hyperion/firebase.json
