--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [{ name = "AEECL ECLAIR" }]
 
 # Hyperion follows Semantic Versioning
 # https://semver.org/
-version = "5.1.0"
+version = "5.2.0"
 requires-python = ">= 3.12, < 3.15"
 
 license = "MIT"
@@ -174,11 +174,7 @@ ignore_missing_imports = true
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "module"
 asyncio_default_test_loop_scope = "module"
-filterwarnings = [
-    "error",
-    "ignore::DeprecationWarning",
-]
-    
+filterwarnings = ["error", "ignore::DeprecationWarning"]
 
 
 [tool.coverage.run]
@@ -201,4 +197,3 @@ exclude_also = []
 
 skip_covered = true
 show_missing = true
-
