Precisions about config.yaml

--- a/config.template.yaml
+++ b/config.template.yaml
@@ -141,10 +141,10 @@ FACTORIES_DEMO_USERS:
 
 SMTP_ACTIVE: False
 SMTP_PORT: 587
-SMTP_SERVER:
-SMTP_USERNAME:
-SMTP_PASSWORD:
-SMTP_EMAIL:
+SMTP_SERVER: ""
+SMTP_USERNAME: ""
+SMTP_PASSWORD: ""
+SMTP_EMAIL: ""
 
 ##########################
 # Firebase Configuration #
